# guppy-gpu

./: .gitignore  README.md  pyproject.toml
src/guppy_gpu/: api.py  compiler.py  cudaq_qec.py  decorator.py  definition.py  errors.py
tests/integration/: conftest.py  test_gpu.py
