[project]
name = "guppy-gpu"
version = "0.1.0"
description = "Guppy library for real-time GPU decoding on Quantinuum hardware."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Craig Roy", email = "craig.roy@quantinuum.com" },
    { name = "Kartik Singhal", email = "kartik.singhal@quantinuum.com" },
]
maintainers = [
    { name = "Kartik Singhal", email = "kartik.singhal@quantinuum.com" },
]
requires-python = ">=3.10"
dependencies = [
    "guppylang-internals>=0.25.0",
    "guppylang>=0.21.4",
    "hugr >= 0.13.1",
    "tket-exts >= 0.11.0",
]

[dependency-groups]
dev = ["pytest>=8.4.2"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.deptry]
known_first_party = ["guppy_gpu"]
